plugins {
    id 'java'
}

repositories {
    jcenter()
}
sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
        resources {
            srcDirs = ['src/main/res']
        }
    }
    test {
        java {
            srcDirs = ['src/test/java']
        }
        resources {
            srcDirs = ['src/test/res']
        }
    }
}
libsDirName = 'release'
java {
	sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}
dependencies {
    implementation 'com.google.guava:guava:29.0-jre'
	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.11.0'
	implementation group: 'com.jgoodies', name: 'jgoodies-forms', version: '1.9.0'
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
	
    testImplementation 'org.testng:testng:7.2.0'
    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.19.0'
    
}

test {
    useTestNG()
}

jar {
  manifest { 
    attributes "Main-Class": 'de.robadd.logfilter.Main'
  }  

  from {
    configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
  }
}
